# rewardspy

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  detectors.md  hack_patterns.md  quickstart.md
examples/: detect_hacking.py  grpo_math.py  healthy_training.py  quickstart.py  trl_integration.py
rewardspy/: __init__.py  cli.py  store.py  wrapper.py
rewardspy/detectors/: __init__.py  base.py  ceiling.py  components.py  engine.py  length.py  slope.py  variance.py
rewardspy/exporters/: __init__.py  csv.py  jsonl.py  parquet.py
rewardspy/tui/: __init__.py  app.py  dashboard.tcss  render.py  theme.py
tests/: test_cli.py  test_detectors.py  test_exporters.py  test_tui.py  test_wrapper.py
